--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
 
 </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/wScratchPad.min.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="wScratchPad.min.js"></script>
     <script>
     $('#scratchCard').wScratchPad({
     size        : 70,          // The size of the brush/scratch.
-    bg          : './images/GFG KARE STUDENT CHAPTER.png',  // Background (image path or hex color).
+    bg          : './GFG KARE STUDENT CHAPTER.png',  // Background (image path or hex color).
     // fg          : '#0195FF',  // Foreground (image path or hex color).
-    fg          : './images/google-scratch-card.jpg',  // Foreground (image path or hex color).
+    fg          : './google-scratch-card.jpg',  // Foreground (image path or hex color).
     realtime    : true,       // Calculates percentage in realitime.
     scratchDown: null, 
     // function(e, percent){ console.log("scratchDown:" + percent); },
